# linalg

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindLAPACK.cmake
doc/: Doxyfile
python/: CMakeLists.txt  setup.py
python/linalg/: blas.py
python/src/: blas.cc  blas.hh  module.cc  module.hh
python/test/: dot_test.py  gemv_test.py  nrm2_test.py  run_tests.py
src/: CMakeLists.txt  array.hh  array_iterator.hh  array_operators.hh  arraybase.hh  arrayview.cc  arrayview.hh  blas.cc  blas.hh  cholesky.hh  exception.cc  exception.hh  lapack.cc  lapack.hh  linalg.hh  matrix.hh  matrix_operators.hh  memory.hh  openmp.hh  operators.hh  python.hh  qr.hh  simd.hh  symmatrix.hh  trimatrix.hh  trimatrix_operators.hh  utils.hh  vector.hh  vector_operators.hh  workspace.cc  workspace.hh
src/blas/: axpy.hh  blas.hh  dot.hh  gemm.hh  gemv.hh  getc2.hh  nrm2.hh  scal.hh  trmm.hh  trmv.hh  trsm.hh  utils.hh
src/lapack/: geqrf.hh  getc2.hh  lapack.hh  ormqr.hh  potrf.hh  trtri.hh  trtrs.hh
test/: CMakeLists.txt  arraytest.cc  arraytest.hh  choleskytest.cc  choleskytest.hh  cputime.cc  cputime.hh  dottest.cc  dottest.hh  gemmtest.cc  gemmtest.hh  gemvtest.cc  gemvtest.hh  geqrftest.cc  geqrftest.hh  main.cc  matrixtest.cc  matrixtest.hh  nrm2test.cc  nrm2test.hh  potrftest.cc  potrftest.hh  qrtest.cc  qrtest.hh  trimatrixtest.cc  trimatrixtest.hh  trmmtest.cc  trmmtest.hh  trmvtest.cc  trmvtest.hh  trsmtest.cc  trsmtest.hh  trtritest.cc  trtritest.hh  trtrstest.cc  trtrstest.hh  unittest.cc  unittest.hh
